fix(misc): fix GHA dotnet versions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,13 @@ jobs:
       with:
         node-version: '17'
         cache: 'yarn'
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: | 
+          6.0.x
+          7.0.x
+        include-prerelease: true
     - name: Build affected
       run: |
         corepack enable
