fix(repo): fixing release script

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -31,8 +31,8 @@ jobs:
       env:
         BASE_REF: origin/${{ github.base_ref }}
         HEAD_REF: origin/${{ github.head_ref }}
-        GITHUB_USER: ${{ secrets.GITHUB_USER }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_USER: ${{ secrets.GIT_USER_KILLIAN }}
+        GITHUB_TOKEN: ${{ secrets.GIT_TOKEN_KILLIAN }}
       run: |
         git config --global user.email "hale.killian@gmail.com"
         git config --global user.name "Killian Hale"
