--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,8 +22,8 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - name: Get release assets
         env:
-          GITHUB_USER: ${{ secrets.GITHUB_USER }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_USER: ${{ secrets.GIT_USER_KILLIAN }}
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN_KILLIAN }}
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_KILLIAN}}
           TAG_NAME: ${{ github.event.release.tag_name }}
           PACKAGES_DIST_DIR: ./dist/packages
