--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          token: ${{ github.token }}
+          token: ${{ secrets.GIT_TOKEN_KILLIAN }}
       - uses: actions/setup-node@v2
         with:
           node-version: '17'
@@ -29,9 +29,12 @@ jobs:
             7.0.x
           include-prerelease: true
       - name: Create build artifacts
+        env:
+          GITHUB_USER: ${{ secrets.GIT_USER_KILLIAN }}
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN_KILLIAN }}
         run: |
-          git config --global user.email "hale.killian@gmail.com"
-          git config --global user.name "Killian Hale"
+          git config user.email "hale.killian@gmail.com"
+          git config user.name "Killian Hale"
           corepack enable
           make templates -B
           make artifacts
@@ -42,8 +45,8 @@ jobs:
           echo "RELEASE_VERSION=$VER" >> $GITHUB_ENV
       - name: Create release
         env:
-          GITHUB_USER: ${{ secrets.GITHUB_USER }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_USER: ${{ secrets.GIT_USER_KILLIAN }}
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN_KILLIAN }}
           RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
           ARTIFACTS_DIR: ./dist/artifacts
