--- a/packages/docker/project.json
+++ b/packages/docker/project.json
@@ -60,14 +60,14 @@
     "updateDependencies": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "command": "if [[ '{args.pathPrefix}' = 'undefined' ]] ; then pathPrefix=''; else pathPrefix='{args.pathPrefix}/'; fi; node ./scripts/update-dependencies.js --root=$PWD --peerVersion='{args.peerVersion}' --excludedRootDeps=guid-typescript,xmlbuilder2 --projectDir=${pathPrefix}packages/docker"
+        "command": "node ./scripts/update-dependencies.js --root=$PWD --peerVersion='{args.peerVersion}' --excludedRootDeps=guid-typescript,xmlbuilder2 --projectDir=${pathPrefix}packages/docker"
       }
     },
     "version": {
       "executor": "@nrwl/workspace:run-commands",
       "outputs": [],
       "options": {
-        "command": "if [[ '{args.pathPrefix}' = 'undefined' ]] ; then pathPrefix=''; else pathPrefix='{args.pathPrefix}/'; fi; cd ${pathPrefix}packages/docker; npm version {args.to} --git-tag-version=false"
+        "command": "cd ${pathPrefix}packages/docker; npm version {args.to} --git-tag-version=false"
       }
     }
   }
