--- a/packages/helm/package.json
+++ b/packages/helm/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@nx-boat-tools/helm",
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0-rc.0",
   "main": "src/index.js",
   "generators": "./generators.json",
   "executors": "./executors.json",
   "peerDependencies": {
-    "@nx-boat-tools/common": "^0.1.0-alpha.2"
+    "@nx-boat-tools/common": "^0.1.0-rc.0"
   },
   "dependencies": {
-    "minimist": "^1.2.5",
-    "tslib": "^2.0.0",
-    "underscore": "^1.13.1"
+    "glob": "^8.0.3",
+    "minimist": "^1.2.6",
+    "tslib": "^2.4.0",
+    "underscore": "^1.13.3"
   }
 }
