--- a/packages/docker/project.json
+++ b/packages/docker/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/docker/src",
   "projectType": "library",
   "targets": {
