chore(repo): changing dependabot to weekly

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
     directory: "/" # Location of package manifests
     target-branch: develop
     schedule:
-      interval: "daily"
+      interval: "weekly"
     commit-message:
       prefix: "chore(repo):"
     ignore:
